--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
 
     <!-- Chatbot Integration -->
     <div id="chatbot-container">
+        <flowise-fullchatbot></flowise-fullchatbot>
         <script type="module">
             import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
-            Chatbot.init({
+            Chatbot.initFull({
                 chatflowid: "97509bee-1c30-415d-b2b5-86f86473160d",
                 apiHost: "https://simelabs-1.app.flowiseai.com",
             });
