--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main>
         <h1>About Our Services</h1>
         <p>
-            We offer a variety of services tailored to your needs, including AI-based solutions, RISC-V processor development, and VLSI-related design work. Our team of experts is dedicated to providing high-quality services, ensuring your projects are completed with efficiency and precision.
+            We offer various services tailored to your needs, including Lattice semiconductor's FPGA products and VLSI-related design work. Our team of experts is dedicated to providing high-quality services, ensuring your projects are completed with efficiency and precision.
         </p>
         <p>
             Feel free to explore our website and learn more about the projects we are working on. You can also interact with our chatbot for instant help or inquiries.
