--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
     <!-- Chatbot Integration -->
     <div id="chatbot-container">
         <script type="module">
-            import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
-            Chatbot.init({
-                chatflowid: "97509bee-1c30-415d-b2b5-86f86473160d",
-                apiHost: "https://simelabs-1.app.flowiseai.com",
-            });
-        </script>
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "97509bee-1c30-415d-b2b5-86f86473160d",
+        apiHost: "https://simelabs-1.app.flowiseai.com",
+    })
+</script>
+
     </div>
 
     <!-- Toggle button for chatbot -->
