--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main>
         <h1>About Our Services</h1>
         <p>
-            We offer a variety of services tailored to your needs, including AI-based solutions, RISC-V processor development, and VLSI-related design work. Our team of experts is dedicated to providing high-quality services, ensuring your projects are completed with efficiency and precision.
+            We specialize in providing cutting-edge solutions and support for Lattice Semiconductor FPGA products, including the CertusPro, XP2, and Avant families. Our interactive chatbot, powered by advanced AI, is here to assist you with all your FPGA-related queries. Whether you need detailed specifications, datasheets, or information about the internal architecture of Lattice FPGAs, our chatbot is ready to provide accurate and timely responses. With our expertise and commitment to precision, we ensure that your projects involving Lattice FPGAs are optimized for success. Let us help you navigate the world of programmable logic with ease!
         </p>
         <p>
             Feel free to explore our website and learn more about the projects we are working on. You can also interact with our chatbot for instant help or inquiries.
