--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
     <!-- Chatbot Integration -->
     <div id="chatbot-container">
         <script type="module">
-    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
-    Chatbot.init({
-        chatflowid: "97509bee-1c30-415d-b2b5-86f86473160d",
-        apiHost: "https://simelabs-1.app.flowiseai.com",
+            import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+            Chatbot.init({
+                chatflowid: "a75c58c7-6544-491a-9e23-e89eeefe813e",
+                apiHost: "http://localhost:3000",
     })
-</script>
-
+        </script>
     </div>
 
     <!-- Toggle button for chatbot -->
