--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
-        chatflowid: "97509bee-1c30-415d-b2b5-86f86473160d",
-        apiHost: "https://simelabs-1.app.flowiseai.com",
+        chatflowid: "166845cb-11a6-45f5-bfb5-b66154baa755",
+        apiHost: "http://localhost:3000",
     })
 </script>
 
