--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
-        chatflowid: "a75c58c7-6544-491a-9e23-e89eeefe813e",
-        apiHost: "http://localhost:3000",
+        chatflowid: "6b07aeec-39cf-4498-88f3-545e2f50bcc5",
+        apiHost: "https://simelabs-2.app.flowiseai.com",
     })
 </script>
 
