--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
     <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
-        chatflowid: "11fd13dc-0394-479f-988f-a5dbeef8e708",
-        apiHost: "http://192.168.0.177:3000",
+        chatflowid: "6b07aeec-39cf-4498-88f3-545e2f50bcc5",
+        apiHost: "https://simelabs-2.app.flowiseai.com",
     })
 </script>
+
 
 
     </div>
