--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
-        chatflowid: "e9de7e90-f158-4f9a-a51e-ad04a65f4db4",
-        apiHost: "https://simelabs-2.app.flowiseai.com",
+        chatflowid: "c3025d43-5fbc-4cad-a52d-85167f077b2a",
+        apiHost: "http://192.168.0.177:3000",
     })
 </script>
 
